--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,6 +3,7 @@ set(CMAKE_CXX_STANDARD 11)
 set(CMAKE_CXX_STANDARD_REQUIRED TRUE)
 project( ball_tracking )
 find_package( OpenCV REQUIRED )
+find_library(wiringPi_LIB wiringPi)
 include_directories( ${OpenCV_INCLUDE_DIRS} )
 add_executable( ball_tracking source/ball_tracking.cpp )
-target_link_libraries( ball_tracking ${OpenCV_LIBS} )
+target_link_libraries( ball_tracking ${wiringPi_LIB} ${OpenCV_LIBS} )
